fix aside overflow

--- a/style.css
+++ b/style.css
@@ -56,10 +56,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-#content {
-    width: 100%;
-    height: 100%;
-}
 
 .row-container {
     display: flex;
@@ -125,7 +121,6 @@ header {
 /* Sidebar */
 
 aside {
-    height: 100%;
     width: 305px;
     padding: 35px 15px 0 30px;
     box-sizing: border-box;
